--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <!-- Press -->
 
     <section id="press">
-      <img class="press-img" src="images/techcrunch.png" alt="tc-logo" />
+      <img class="press-img" src="images/TechCrunch.png" alt="tc-logo" />
       <img class="press-img" src="images/tnw.png" alt="tnw-logo" />
       <img
         class="press-img"
